fixing layout issue

--- a/_sass/block/gallery.sass
+++ b/_sass/block/gallery.sass
@@ -3,8 +3,8 @@
 .gallery
 
     --gap: calc( 2 * var(--x))
-    margin-top: var(--gap)
-    margin-bottom: var(--gap)
+    padding-top: var(--x)
+    padding-bottom: var(--x)
     
     display: grid
 
