--- a/_sass/block/sibling-nav.sass
+++ b/_sass/block/sibling-nav.sass
@@ -4,8 +4,8 @@
     grid-auto-columns: 1fr
     gap: 0
 
-    margin-bottom: calc( var(--x) * -1 )
-    padding-top: var(--x)
+    // margin-bottom: calc( var(--x) * -1 )
+    // padding-top: var(--x)
 
 .sibling-btn
     border-top: solid 1px var(--scribe-mute)
