--- a/_sass/utility/box.sass
+++ b/_sass/utility/box.sass
@@ -1,7 +1,7 @@
 
 
 .box
-    margin: var(--x) var(--x)
+    padding: var(--x) var(--x)
 
 .ml-x
     margin-left: var(--x)
